# flappy_bird_ffi

./: .gitignore  BOOKMARKS.md  Cargo.toml  MOTION_CONTROL_GUIDE.md  MPU6050_EXAMPLE.md  PROJECT_STRUCTURE.md  README.md
.github/: copilot-instructions.md
Excercise_F429_Disc/flappy_bird_ffi/Debug/: flappy_bird_ffi.elf  flappy_bird_ffi.map  objects.list
Excercise_F429_Disc/flappy_bird_ffi/flappy_bird_ffi/flappy_bird_ffi/: flappy_bird_ffi.ioc
Exercises_f429_disc/flappy_bird_ffi/.cargo/: config.toml
Exercises_f429_disc/flappy_bird_ffi/src/: display.rs  display_ffi.rs  game.rs  main.rs
c_src/.metadata/: .log4j2.xml  version.ini
c_src/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
c_src/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
c_src/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
c_src/tcd_tsc_mpu6050_drivers/: .project  tcd_tsc_mpu6050_drivers.ioc
src/: board.rs  exti.rs  gpio.rs  i2c.rs  main.rs  mcu.rs  motion_control.rs  mpu6050.rs  mpu6050_interrupt.rs  reg.rs  startup_stm32f429.rs
src/drivers/: button.rs  gpio.rs  i2c.rs  led.rs  mod.rs  mpu6050.rs  mpu6050_interrupt.rs
stm32f49I_display_app/: Cargo.toml  gdb-fault-inspect.gdb  gdb-fault-inspection-fi.gdb  gdb-fault-inspection.gdb  gdb-lcd-id-scan.gdb  gdb-vector-check.gdb  memory.x
stm32f49I_display_app/.cargo/: config.toml
stm32f49I_display_app/src/: demo.rs  hw.rs  main.rs  onboard.rs  onboard_disc1.rs
stm32f49I_display_lib/: Cargo.toml  PROMPTS.md  copilot_prompts_1.md  square.ppm  triangle.ppm
stm32f49I_display_lib/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  delta_change.md  feature_display_initialization.md  feature_request.md
stm32f49I_display_lib/apps/f429i_rect_app/: Cargo.toml  README.md  memory.x
stm32f49I_display_lib/apps/f429i_rect_app/.cargo/: config.toml
stm32f49I_display_lib/apps/f429i_rect_app/src/: main.rs
stm32f49I_display_lib/docs/: EMBEDDED_SETUP.md  STM32F429-pinout.txt
stm32f49I_display_lib/examples/: f429i_onboard_fmc.rs  f429i_onboard_ltdc.rs  f429i_rect.rs  f429i_square.rs  init.rs  rect.rs  triangle.rs  visual_rect.rs
stm32f49I_display_lib/src/: display.rs  lib.rs  main.rs  shapes.rs
stm32f49I_display_lib/src/hw/: ili9341.rs  mod.rs
stm32f49I_display_lib/tests/: display_init.rs  shapes_rect.rs  shapes_triangle.rs  visual_manual.rs
(+60 files in other folders)
