[package]
name = "stm32f49I_display_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { version = "1", optional = true }
embedded-hal = { version = "1.0.0-alpha.8", optional = true }
embedded-graphics = { version = "0.8", optional = true }
display-interface-spi = { version = "0.4", optional = true }
mipidsi = { version = "0.7", optional = true }
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
panic-halt = { version = "0.2", optional = true }
stm32f4xx-hal = { version = "0.16", features = ["stm32f429", "rt"], optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = ["dep:thiserror"]
hw-ili9341 = [
	"dep:embedded-hal",
	"dep:embedded-graphics",
	"dep:display-interface-spi",
	"dep:mipidsi",
	"dep:cortex-m",
	"dep:cortex-m-rt",
	"dep:panic-halt",
	"dep:stm32f4xx-hal",
]
hw-onboard-lcd = [
	"dep:embedded-hal",
	"dep:cortex-m",
	"dep:cortex-m-rt",
	"dep:panic-halt",
	"dep:stm32f4xx-hal",
]

# Optional hardware selection flags for FMC onboard LCD example
# RS address line selection (default: rs-a16)
rs-a16 = []
rs-a17 = []
rs-a18 = []
# Backlight pin selection on GPIOB (default: bl-pb1)
bl-pb1 = []
bl-pb5 = []

[profile.dev]
# Ensure rich debug info and predictable line mappings for embedded debugging
opt-level = 0
debug = 2
debug-assertions = true
lto = false
codegen-units = 1
incremental = true
remap-debuginfo = false
