[package]
name = "f429i_rect_app"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
embedded-hal = { version = "1.0.0-alpha.8" }
stm32f4xx-hal = { version = "0.16", features = ["stm32f429", "rt"] }

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
lto = false
codegen-units = 1
incremental = true
remap-debuginfo = false
